# main-tiago

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTROL_ROBOT.md  README.md  SETUP_DEMO.md  SIMU_ROBOT.md  camera_yolo.py  connect_to_robot.bash  install.bash  launch_cario360.sh  pre-commit-config.yaml  requirements.txt  venv_install.bash
.config/: Dockerfile  README.md  README_CONFIG.md  aliases.bash  run-docker.bash
.config/ros1_config/: Dockerfile  aliases.bash  build-docker.bash  run-docker.bash
.config/ros2_config/: Dockerfile  aliases.bash  build-docker.bash  run-docker.bash
.config/rosbridge_config/: Dockerfile  build_docker_rosbridge.bash  run_docker.bash
.github/workflows/: ROS1_Test_Workflow.yml  ROS2_Test_Workflow.yml  py-test.yml  test.yml
docs/: demo_docker.md
prototyping/src/: 4to1image.py  bird_view.py  cov_matrix.py  distance_calculator.py  reconstruction_video.py  temp.py  yolov5_benchmark.py
prototyping/src/cpp_pubsub/: CMakeLists.txt  package.xml
prototyping/src/surround_yolo/: 4to1image.py  homography.py  image4to1.py  image4to1FinalVersion.py  image4to1_V1.py  image4to1_V2.py  image4to1_V3.py  sift.py  testAppariementMain.py  testStich.py  testsSIFT.py  undistort.py  undistortPolynomial.py  video_reconstruction_before_yolo.py  yolov8_benchmark_surround.py  zoom.py
prototyping/src/yolo_cpp/: CMakeLists.txt  main.cpp
prototyping/test/: test4to1.py  test_DistanceCalculator.py  test_network.py  test_reconstruction_video.py  test_undistort.py  test_yolo.py  test_yolov5_benchmark.py  test_yolov8_benchmark.py
rob_ws/: .gitignore  build_rob.sh  launch_rob_ihm.sh  launch_rob_planner.sh
rob_ws/src/cario_gazebo/: CMakeLists.txt  package.xml
rob_ws/src/cario_ihm_agent/: CARIO_SPOT_CONTROL.md  CMakeLists.txt  package.xml
rob_ws/src/cario_ihm_agent/include/: relay_controller_node.hpp  robot_spot.hpp
rob_ws/src/cario_ihm_agent/src/: relay_controller_node.cpp  robot_spot.cpp
rob_ws/src/cario_ihm_agent/test/: CMakeLists.txt  spot_control_test.cpp
rob_ws/src/cario_map/: CMakeLists.txt  package.xml
rob_ws/src/cario_map/include/: GraymapImage.h
rob_ws/src/cario_map/maps/workshop/: usine_v2.yaml
rob_ws/src/cario_map/maps/workshop_small/: usine_v1.pgm  usine_v1.yaml
rob_ws/src/cario_map/src/: get_map.cpp
rob_ws/src/cario_map/srv/: GetMapInfo.srv
rob_ws/src/cario_navigation/cario_navigation/: CMakeLists.txt  package.xml
rob_ws/src/cario_robot/cario_robot/: CMakeLists.txt  package.xml
rob_ws/src/cario_robot_model/: CMakeLists.txt  package.xml
rob_ws/src/cario_robot_model/launch/: upload.launch
rob_ws/src/cario_robot_model/maps/workshop/: usine_v2.pgm
rob_ws/src/cario_robot_model/maps/workshop_cleaned/: usine_v2.pgm
rob_ws/src/cario_robot_model/urdf/: cario.urdf.xacro
rob_ws/src/cario_rviz/: CMakeLists.txt  package.xml
rob_ws/src/cario_static/: CMakeLists.txt  package.xml
rob_ws/src/cario_tools/: CARIO_TOOLS.md  CMakeLists.txt  package.xml
rob_ws/src/cario_tools/include/: gazebo_synchronizer.hpp  loc_error_node.hpp
rob_ws/src/cario_tools/msg/: TFTimeStamped.msg
rob_ws/src/cario_tools/src/: gazebo_synchronizer.cpp  loc_error_node.cpp
rob_ws/src/cario_tools/test/: CMakeLists.txt
rob_ws/src/dynamic_obstacle/: CMakeLists.txt  package.xml
rob_ws/src/mpc_local_planner_copy/: local_planner.yaml  pmb2_navigation.launch
rob_ws/src/multi_obstacles_tracker/: CMakeLists.txt  package.xml
rob_ws/src/multi_obstacles_tracker/launch/: local_costmap_inflater.launch  multi_obstacles_tracker.launch  simu_local_costmap_inflater.launch
rob_ws/src/multi_obstacles_tracker/maps/room/cost_map/: cost_map.pgm  cost_map.yaml
rob_ws/src/multi_obstacles_tracker/maps/room/static_map/: static_map.pgm  static_map.yaml
rob_ws/src/multi_obstacles_tracker/scripts/: local_costmap_inflation.py  obstacles_cluster.py  obstacles_tracker.py  test_CameraDetectionsStamped.py
rob_ws/src/multi_obstacles_tracker/src/: cluster_viz.cpp  obstacles_cluster.cpp  obstacles_tracker.cpp  scan_filter.cpp
rob_ws/src/multi_obstacles_tracker_msgs/: CMakeLists.txt  package.xml
rob_ws/src/pal_urdf_utils/: CHANGELOG.rst  CMakeLists.txt
rob_ws/src/spot_control_node/: CMakeLists.txt  package.xml
rob_ws/src/spot_control_node/include/: spot_control_node.hpp
rob_ws/src/spot_control_node/src/: spot_control_node.cpp
rob_ws/src/spot_control_node/test/: CMakeLists.txt
ros_ws/: run_camera_yolo.sh
ros_ws/install/: local_setup.sh
rosbridge_ws/: build_bridge.sh  launch_bridge.sh
setup/: Dockerfile  aliases.bash  connect_to_robot.bash  docker-setup.md  install.bash  requirements.txt  run-docker.bash  venv_uninstall.sh
src/: reconstructionVideo.py  reconstruction_video_V2.py  yolo.py  yolov5_benchmark.py  yolov8_benchmark.py
src/multi_obstacles_tracker/: CMakeLists.txt  package.xml
src/multi_obstacles_tracker/launch/: multi_obstacles_tracker.launch
src/multi_obstacles_tracker/maps/room/: room.pgm
src/multi_obstacles_tracker/src/: cluster_viz.cpp  obstacles_cluster.cpp  obstacles_clustering.cpp  obstacles_tracker.cpp  scan_filter.cpp
src/multi_obstacles_tracker_msgs/: CMakeLists.txt
src/py_pubsub/: run_display.sh
src/py_pubsub/install/: setup.sh
src/surround_yolo/: video_reconstruction_before_yolo.py
test/: test_network.py  test_reconstruction_video.py  test_undistort.py  test_yolo.py  test_yolov5_benchmark.py  test_yolov8_benchmark.py
vision_ws/: ECAL.md  README.md  build_vision.sh  launch_vision_yolo.sh  record.py
vision_ws/install/: local_setup.sh  setup.sh
vision_ws/scripts/: build_vision_ws.sh  run_all_camera_yolo.sh  run_all_display.sh  run_camera_yolo.sh  run_display.sh  run_ecal_gateway.sh  run_simu_ecal.sh
vision_ws/src/: record.py
vision_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
vision_ws/src/cpp_pubsub/include/: CameraYolo.hpp  YOLOv5.hpp
vision_ws/src/cpp_pubsub/src/: CameraYolo.cpp  YOLOv5.cpp  main.cpp
vision_ws/src/py_pubsub_msgs/: CMakeLists.txt  message_mapping.yaml  package.xml
vision_ws/src/py_pubsub_msgs/msg/: CameraDetectionStampedArray.msg  ClassCoordinates.msg  ClassCoordinatesArray.msg
(+171 files in other folders)
