<?xml version="1.0"?>
<package format="2">
  <name>cario_navigation</name>
  <version>2.0.19</version>
  <description>PMB2 navigation metapackage</description>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cario_2dnav</exec_depend>
  <exec_depend>cario_maps</exec_depend>
  <exec_depend>cario_laser_sensors</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
