<?xml version="1.0"?>
<package format="2">
  <name>cario_robot</name>
  <version>3.0.33</version>
  <description>CARIO robot description and launch files</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cario_description</exec_depend>
  <exec_depend>cario_bringup</exec_depend>
  <exec_depend>cario_controller_configuration</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
